--- a/.github/workflows/riscv64.yml
+++ b/.github/workflows/riscv64.yml
@@ -20,29 +20,29 @@ jobs:
         run: >
           sudo apt-get update &&
           sudo apt-get install
-          gcc-10-riscv64-linux-gnu
-          g++-10-riscv64-linux-gnu
+          gcc-13-riscv64-linux-gnu
+          g++-13-riscv64-linux-gnu
           ninja-build
           qemu-user
 
       - name: Checkout dynarmic repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Ccache
         if: matrix.platform == 'linux'
-        uses: hendrikmuhs/ccache-action@v1.2
+        uses: hendrikmuhs/ccache-action@v1.2.13
 
       - name: Checkout ext-boost repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
-          repository: MerryMage/ext-boost
+          repository: ifvlaboratory/boost
           path: externals/ext-boost
 
       - name: Configure CMake for RISCV64 (Linux)
         if: matrix.platform == 'linux'
         env:
-          CC: riscv64-linux-gnu-gcc-10
-          CXX: riscv64-linux-gnu-g++-10
+          CC: riscv64-linux-gnu-gcc-13
+          CXX: riscv64-linux-gnu-g++-13
         run: >
           cmake
           -B ${{github.workspace}}/build-riscv64
