CI: Fix warning spam from ld
Example warning message: `ld: warning: pointer not aligned at _STR_MUL+0x0 from /Users/runner/work/dynarmic/dynarmic/build/externals/zydis/libZydis.a[x86_64][19](FormatterIntel.c.o)`

Reference: https://trac.macports.org/ticket/68368

--- a/.github/workflows/multiarch.yml
+++ b/.github/workflows/multiarch.yml
@@ -29,6 +29,9 @@ jobs:
           path: externals/ext-boost
 
       - name: Configure CMake
+        env:
+          CFLAGS: "-WM11.0"
+          CXXFLAGS: "-WM11.0"
         run: >
           cmake
           -B ${{github.workspace}}/build
