CI: Fix warning spam from ld
We are getting closer! It turns out that it's a flag for linker! not
compiler.

Reference link below.
https://forums.developer.apple.com/forums/thread/731086

--- a/.github/workflows/multiarch.yml
+++ b/.github/workflows/multiarch.yml
@@ -30,8 +30,7 @@ jobs:
 
       - name: Configure CMake
         env:
-          CFLAGS: "-WM11.0"
-          CXXFLAGS: "-WM11.0"
+          LDFLAGS: "-ld_classic"
         run: >
           cmake
           -B ${{github.workspace}}/build
