--- a/.github/workflows/x86-64.yml
+++ b/.github/workflows/x86-64.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Install build dependencies
         if: ${{matrix.os == 'macos-latest'}}
         run: |
-          brew install llvm ninja
-          echo "/usr/local/opt/llvm/bin" >> $GITHUB_PATH
+          brew install ninja
 
       - name: Checkout dynarmic repo
         uses: actions/checkout@v4
@@ -71,6 +70,8 @@ jobs:
 
       - name: Configure CMake
         if: ${{matrix.os == 'macos-latest'}}
+          CC: clang
+          CXX: clang++
         run: >
           cmake
           -B ${{github.workspace}}/build
